# EXAMPLE PROGRAMS

XT = @XT@

EXTRA_DIST = $(wildcard *.tig) $(wildcard *.input)

CLEANFILES = \
	*.abox *.pre-abox *.ainput *.txt *.tas *.box \
	*.tree *.tmp *.pre-tas *~ *.tas.check *.cir *.cir.check \
	*.s *.ir *.ir.check *.ra *.a *.sweettas *.asm *.asm.check *.run

# TARGETS

all: 

#include $(top_srcdir)/xmpl/make-rules


