# EXAMPLE PROGRAMS

XT = @XT@

EXTRA_DIST = $(wildcard *.tig) $(wildcard *.input) make-rules

.PRECIOUS: %.abox %.ainput %.txt %.tas %.box %.tree

# FILES

CLEANFILES = \
	*.abox *.pre-abox *.ainput *.txt *.tas *.box \
	*.tree *.tmp *.pre-tas *~ *.tas.check *.cir *.cir.check \
	*.s *.ir *.ir.check *.ra *.a *.sweettas *.asm *.asm.check *.run *.tccheck

# TARGETS

all: 

include $(top_srcdir)/Makefile.tiger-front



